--- a/tsconfig.runtime.json
+++ b/tsconfig.runtime.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
-  "display": "Build",
+  "display": "Runtime",
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
     "allowImportingTsExtensions": true,
