--- a/action.yml
+++ b/action.yml
@@ -14,6 +14,15 @@ inputs:
 outputs:
   matrix:
     description: "The generated matrix."
+    value: ${{ steps.execution.outputs.matrix }}
 runs:
-  using: "node16"
-  main: "build/loader/index.js"
+  using: "composite"
+  steps:
+    - run: node "$ACTION_PATH/build/loader/index.js"
+      shell: bash
+      id: execution
+      env:
+        ACTION_PATH: ${{ github.action_path }}
+        INPUT_PLAN_FILE: ${{ inputs.plan-file }}
+        INPUT_PLAN: ${{ inputs.plan }}
+        INPUT_TSCONFIG: ${{ inputs.tsconfig }}
