Eliminate custom loader magic

--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "try": "tsc && node build/main/index.js",
-    "try:loader": "tsc && node build/loader/index.js",
-    "build": "tsc",
+    "try": "tsc && bin/action-exec",
+    "build": "rm -rf build && tsc",
     "build:integrity-check": "yarn build && bin/check-build-integrity",
     "test": "bin/test",
     "prettier:fix": "prettier -w .",
