--- a/action.yml
+++ b/action.yml
@@ -18,7 +18,10 @@ outputs:
 runs:
   using: "composite"
   steps:
-    - run: node "$ACTION_PATH/build/loader/index.js"
+    - run: yarn install --immutable --immutable-cache
+      shell: bash
+      working-directory: ${{ github.action_path }}
+    - run: "$ACTION_PATH/bin/action-exec"
       shell: bash
       id: execution
       env:
