--- a/.github/workflows/self-test.yml
+++ b/.github/workflows/self-test.yml
@@ -18,7 +18,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - uses: ./.
+      - uses: ./.github/actions/action-plan
         id: plan
         with:
           plan-file: .github/action-plan.ts
