Custom module and module resolution settings

--- a/tsconfig.runtime.json
+++ b/tsconfig.runtime.json
@@ -5,6 +5,15 @@
   "compilerOptions": {
     "allowImportingTsExtensions": true,
     "noEmit": true,
-    "allowJs": true
+    "allowJs": true,
+    "module": "NodeNext",
+    "moduleResolution": "Bundler"
+  },
+  "ts-node": {
+    "moduleTypes": {
+      // Treat all local files as esm.
+      "/**/*": "esm",
+      "./**/*": "esm"
+    }
   }
 }
