Revert "Use a non-root path for self-test (#8)"
This reverts commit fcb9c3854f3e18e0c33941359fc1e2476b854f93.

--- a/.github/workflows/self-test.yml
+++ b/.github/workflows/self-test.yml
@@ -18,7 +18,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - uses: ./.github/actions/action-plan
+      - uses: ./.
         id: plan
         with:
           plan-file: .github/action-plan.ts
