--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "@action-plan/action",
+  "name": "@action-plan/runtime",
   "version": "1.0.0",
   "type": "module",
   "license": "MIT",
   "private": true,
   "main": "src/index.ts",
   "dependencies": {
-    "@action-plan/runtime": "workspace:*",
-    "@actions/core": "^1.10.0",
+    "@action-plan/core": "workspace:*",
     "@types/node": "^16.18.39"
   },
   "devDependencies": {
