--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,9 +1,6 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
-  "display": "Build",
-  "extends": "../../tsconfig.base.json",
-  "compilerOptions": {
-    "module": "NodeNext",
-  },
+  "display": "packages/core",
+  "extends": "@action-plan/tsconfig/build.json",
   "include": ["src"]
 }
