--- a/packages/runtime/tsconfig.json
+++ b/packages/runtime/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
-  "display": "packages/action",
+  "display": "packages/runtime",
   "extends": "@action-plan/tsconfig/build.json",
   "include": ["src"]
 }
