--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -3,3 +3,13 @@ nodeLinker: node-modules
 yarnPath: .yarn/releases/yarn-3.6.1.cjs
 
 enableTelemetry: false
+
+supportedArchitectures:
+  os:
+   - darwin
+   - linux
+   - windows
+  cpu:
+    - current
+    - x64
+    - arm64
