--- a/packages/action/package.json
+++ b/packages/action/package.json
@@ -7,10 +7,10 @@
   "main": "src/index.ts",
   "dependencies": {
     "@action-plan/runtime": "workspace:*",
-    "@actions/core": "^1.10.1",
-    "@types/node": "^20.10.4"
+    "@actions/core": "^1.11.1"
   },
   "devDependencies": {
-    "typescript": "^5.3.3"
+    "@types/node": "^22.15.11",
+    "typescript": "^5.8.3"
   }
 }
