--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -6,10 +6,10 @@
   "private": true,
   "main": "src/index.ts",
   "dependencies": {
-    "@action-plan/core": "workspace:*",
-    "@types/node": "^20.10.4"
+    "@action-plan/core": "workspace:*"
   },
   "devDependencies": {
-    "typescript": "^5.3.3"
+    "@types/node": "^22.15.11",
+    "typescript": "^5.8.3"
   }
 }
